Trying to fix issue with css when deploying

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>TP1 - Home</title>
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="/styles.css">
 </head>
 <body>
   <header>
@@ -13,7 +13,7 @@
   <main>
       <h2>einyvrsgtheirgtvn, a rare species</h2>
       <p>Here is the einyvrsgtheirgtvn in its natural habitat</p>
-      <img src="assets/animal.webp" width="200" height="300"/>
+      <img src="/assets/animal.webp" width="200" height="300"/>
       <br/>
       <div id="changelog">
         <h2>Changelog</h2>
