Changed title to include einyvrsgtheirgtvn

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="keywords" content="einyvrsgtheirgtvn">
-  <title>TP1 - Home</title>
+  <title>einyvrsgtheirgtvn - Home</title>
   <link rel="stylesheet" href="/styles.css">
 </head>
 <body>
@@ -18,6 +18,7 @@
       <br/>
       <div id="changelog">
         <h2>Changelog</h2>
+        <p>1/17/2024: Modififié la balise title pour inclure einyvrsgtheirgtvn</p>
         <p>1/16/2024: Création de la page web avec header, footer contenant mon nom complet et CIP, une section principale et une section changelog</p>
       </div>
   </main>
