--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <br/>
       <div id="changelog">
         <h2>Changelog</h2>
-        <p>1/17/2024: Modififié la balise title pour inclure einyvrsgtheirgtvn</p>
+        <p>1/17/2024: Modification de la balise title pour inclure einyvrsgtheirgtvn</p>
         <p>1/16/2024: Création de la page web avec header, footer contenant mon nom complet et CIP, une section principale et une section changelog</p>
       </div>
   </main>
