--- a/index.html
+++ b/index.html
@@ -11,6 +11,14 @@
 <body>
   <header>
       <h1>einyvrsgtheirgtvn</h1>
+      <nav>
+        <ul>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="about.html">About</a></li>
+          <li><a href="habitat.html">Habitat</a></li>
+          <li><a href="contact.html">Home</a></li>
+        </ul>
+      </nav>
   </header>
   <main>
       <h2>einyvrsgtheirgtvn, a rare species</h2>
@@ -19,6 +27,7 @@
       <br/>
       <div id="changelog">
         <h2>Changelog</h2>
+        <p>1/23/2024: Ajout d'une barre de navigation</p>
         <p>1/17/2024: Modification de la balise title pour inclure einyvrsgtheirgtvn</p>
         <p>1/16/2024: Création de la page web avec header, footer contenant mon nom complet et CIP, une section principale et une section changelog</p>
       </div>
