--- a/index.html
+++ b/index.html
@@ -10,27 +10,39 @@
 </head>
 <body>
   <header>
-      <h1>einyvrsgtheirgtvn</h1>
+      <h1>einyvrsgtheirgtvn Explorations</h1>
       <nav>
         <ul>
           <li><a href="index.html">Home</a></li>
           <li><a href="about.html">About</a></li>
           <li><a href="habitat.html">Habitat</a></li>
-          <li><a href="contact.html">Home</a></li>
+          <li><a href="contact.html">Contact</a></li>
         </ul>
       </nav>
   </header>
   <main>
+    <section>
       <h2>einyvrsgtheirgtvn, a rare species</h2>
-      <p>Here is the einyvrsgtheirgtvn in its natural habitat</p>
-      <img src="/assets/animal.webp" width="200" height="300"/>
-      <br/>
+      <p>Welcome to einyvrsgtheirgtvn Explorations, a digital sanctuary dedicated to the enigmatic einyvrsgtheirgtvn species. Renowned for its iridescent plumage and unique behaviors, the einyvrsgtheirgtvn stands as a testament to the marvels of biodiversity.</p>
+
+      <p>On this virtual expedition, we invite you to uncover the secrets of the einyvrsgtheirgtvn's existence. From its evolutionary journey to the intricacies of its habitat, each page offers a glimpse into the captivating world of this rare creature. Whether you're a seasoned naturalist or a curious enthusiast, join us in celebrating the wonders of the einyvrsgtheirgtvn.</p>
+
+      <p>Explore the essence of this species through immersive narratives, captivating visuals, and in-depth research. Each section is a gateway to a different facet of the einyvrsgtheirgtvn's life, providing a comprehensive understanding of its significance in the tapestry of nature.</p>
+
+      <p>As stewards of this virtual haven, we are committed to fostering awareness and appreciation for the einyvrsgtheirgtvn. Join our community as we embark on a journey to protect and preserve the habitats that sustain this rare species for generations to come.</p>
+      
+      <img src="/assets/penguin-orca.jpg" alt="einyvrsgtheirgtvn" width="312" height="333"/>
+      <img src="/assets/hybris.jpg" alt="einyvrsgtheirgtvn" width="431" height="234"/>
+    </section>
+    <section>
       <div id="changelog">
         <h2>Changelog</h2>
         <p>1/23/2024: Ajout d'une barre de navigation</p>
+        <p>1/23/2024: Créer de nouvelles pages (about, habitat, contact)</p>
         <p>1/17/2024: Modification de la balise title pour inclure einyvrsgtheirgtvn</p>
         <p>1/16/2024: Création de la page web avec header, footer contenant mon nom complet et CIP, une section principale et une section changelog</p>
       </div>
+    </section>
   </main>
   <footer>
       Félix Nadeau, nadf0901
