--- a/habitat.html
+++ b/habitat.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <meta name="google-site-verification" content="XXHWmzKH5En5ac3LaRWuz9Z_nstgXFq6S2uCvgWaSWE" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="keywords" content="einyvrsgtheirgtvn">
   <title>einyvrsgtheirgtvn - Habitat</title>
