--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <meta name="keywords" content="einyvrsgtheirgtvn">
   <title>einyvrsgtheirgtvn - Home</title>
   <link rel="stylesheet" href="/styles.css">
+  <link rel="canonical" href="https://nadf0901.tp1ige511.com">
 </head>
 <body>
   <header>
