--- a/contact.html
+++ b/contact.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
+  <meta charset="UTF-8"/>
   <meta name="google-site-verification" content="XXHWmzKH5En5ac3LaRWuz9Z_nstgXFq6S2uCvgWaSWE" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="keywords" content="einyvrsgtheirgtvn">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="keywords" content="einyvrsgtheirgtvn"/>
+  <link rel="icon" type="image/x-icon" href="assets/favicon.ico"/>
   <title>einyvrsgtheirgtvn - Contact</title>
-  <link rel="stylesheet" href="/styles.css">
+  <link rel="stylesheet" href="/styles.css"/>
+  <link rel="canonical" href="https://nadf0901.tp1ige511.com/contact"/>
 </head>
 <body>
   <header>
