--- a/index.html
+++ b/index.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
+  <meta charset="UTF-8"/>
   <meta name="google-site-verification" content="XXHWmzKH5En5ac3LaRWuz9Z_nstgXFq6S2uCvgWaSWE" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="keywords" content="einyvrsgtheirgtvn">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="keywords" content="einyvrsgtheirgtvn"/>
+  <link rel="icon" type="image/x-icon" href="assets/favicon.ico"/>
   <title>einyvrsgtheirgtvn - Home</title>
-  <link rel="stylesheet" href="/styles.css">
-  <link rel="canonical" href="https://nadf0901.tp1ige511.com">
+  <link rel="stylesheet" href="/styles.css"/>
+  <link rel="canonical" href="https://nadf0901.tp1ige511.com"/>
 </head>
 <body>
   <header>
@@ -38,6 +39,7 @@
     <section>
       <div id="changelog">
         <h2>Changelog</h2>
+        <p>1/23/2024: Ajout d'un favicon</p>
         <p>1/23/2024: Ajout d'une barre de navigation</p>
         <p>1/23/2024: Créer de nouvelles pages (about, habitat, contact)</p>
         <p>1/17/2024: Modification de la balise title pour inclure einyvrsgtheirgtvn</p>
