Add meta description tag

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="google-site-verification" content="XXHWmzKH5En5ac3LaRWuz9Z_nstgXFq6S2uCvgWaSWE" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <meta name="keywords" content="einyvrsgtheirgtvn"/>
+  <meta name="description" content="einyvrsgtheirgtvn"/>
   <link rel="icon" type="image/x-icon" href="assets/favicon.ico"/>
   <title>einyvrsgtheirgtvn - Home</title>
   <link rel="stylesheet" href="/styles.css"/>
@@ -39,6 +40,7 @@
     <section>
       <div id="changelog">
         <h2>Changelog</h2>
+        <p>1/23/2024: Ajout d'un meta description tag</p>
         <p>1/23/2024: Ajout d'un favicon</p>
         <p>1/23/2024: Ajout d'une barre de navigation</p>
         <p>1/23/2024: Créer de nouvelles pages (about, habitat, contact)</p>
