--- a/contact.html
+++ b/contact.html
@@ -5,7 +5,7 @@
   <meta name="google-site-verification" content="XXHWmzKH5En5ac3LaRWuz9Z_nstgXFq6S2uCvgWaSWE" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <meta name="keywords" content="einyvrsgtheirgtvn"/>
-  <meta name="description" content="einyvrsgtheirgtvn"/>
+  <meta name="description" content="Discover the wonders of the einyvrsgtheirgtvn, a rare and enigmatic species. Explore its evolutionary journey, habitats, and unique behaviors. Join us in celebrating the biodiversity of this extraordinary creature and learn how we're dedicated to preserving its existence for future generations.">
   <link rel="icon" type="image/x-icon" href="assets/favicon.ico"/>
   <title>einyvrsgtheirgtvn - Contact</title>
   <link rel="stylesheet" href="/styles.css"/>
