--- a/en/about.html
+++ b/en/about.html
@@ -1,26 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8"/>
-  <meta name="google-site-verification" content="XXHWmzKH5En5ac3LaRWuz9Z_nstgXFq6S2uCvgWaSWE" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <meta name="keywords" content="einyvrsgtheirgtvn"/>
+  <meta charset="UTF-8">
+  <meta name="google-site-verification" content="XXHWmzKH5En5ac3LaRWuz9Z_nstgXFq6S2uCvgWaSWE">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="keywords" content="einyvrsgtheirgtvn">
   <meta name="description" content="Discover the wonders of the einyvrsgtheirgtvn, a rare and enigmatic species. Explore its evolutionary journey, habitats, and unique behaviors. Join us in celebrating the biodiversity of this extraordinary creature and learn how we're dedicated to preserving its existence for future generations.">
-  <link rel="icon" type="image/x-icon" href="assets/favicon.ico"/>
+  <link rel="icon" type="image/x-icon" href="/assets/favicon.ico">
   <title>einyvrsgtheirgtvn - About</title>
-  <link rel="stylesheet" href="/styles.css"/>
-  <link rel="canonical" href="https://nadf0901.tp1ige511.com/about"/>
+  <link rel="stylesheet" href="/styles.css">
+  <link rel="canonical" href="https://nadf0901.tp1ige511.com/about">
+  <script src="/language-toggle.js" defer></script>
 </head>
 <body>
   <header>
     <h1>einyvrsgtheirgtvn Explorations</h1>
     <nav>
       <ul>
-        <li><a href="index.html">Home</a></li>
+        <li><a href="home.html">Home</a></li>
         <li><a href="about.html">About</a></li>
         <li><a href="habitat.html">Habitat</a></li>
         <li><a href="contact.html">Contact</a></li>
       </ul>
+      <div class="language-toggle">
+        <select id="language-select">
+          <option value="en">English</option>
+          <option value="fr">French</option>
+        </select>
+      </div>
     </nav>
   </header>
   <main>
