--- a/en/habitat.html
+++ b/en/habitat.html
@@ -1,26 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8"/>
-  <meta name="google-site-verification" content="XXHWmzKH5En5ac3LaRWuz9Z_nstgXFq6S2uCvgWaSWE" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <meta name="keywords" content="einyvrsgtheirgtvn"/>
+  <meta charset="UTF-8">
+  <meta name="google-site-verification" content="XXHWmzKH5En5ac3LaRWuz9Z_nstgXFq6S2uCvgWaSWE">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="keywords" content="einyvrsgtheirgtvn">
   <meta name="description" content="Discover the wonders of the einyvrsgtheirgtvn, a rare and enigmatic species. Explore its evolutionary journey, habitats, and unique behaviors. Join us in celebrating the biodiversity of this extraordinary creature and learn how we're dedicated to preserving its existence for future generations.">
-  <link rel="icon" type="image/x-icon" href="assets/favicon.ico"/>
+  <link rel="icon" type="image/x-icon" href="/assets/favicon.ico">
   <title>einyvrsgtheirgtvn - Habitat</title>
-  <link rel="stylesheet" href="/styles.css"/>
-  <link rel="canonical" href="https://nadf0901.tp1ige511.com/habitat"/>
+  <link rel="stylesheet" href="/styles.css">
+  <link rel="canonical" href="https://nadf0901.tp1ige511.com/habitat">
+  <script src="/language-toggle.js" defer></script>
 </head>
 <body>
   <header>
     <h1>einyvrsgtheirgtvn Explorations</h1>
     <nav>
       <ul>
-        <li><a href="index.html">Home</a></li>
+        <li><a href="home.html">Home</a></li>
         <li><a href="about.html">About</a></li>
         <li><a href="habitat.html">Habitat</a></li>
         <li><a href="contact.html">Contact</a></li>
       </ul>
+      <div class="language-toggle">
+        <select id="language-select">
+          <option value="en">English</option>
+          <option value="fr">French</option>
+        </select>
+      </div>
     </nav>
   </header>
   <main>
@@ -35,8 +42,8 @@
         <p>Through a fusion of scientific insights, ecological narratives, and awe-inspiring visuals, this page invites you to appreciate the interconnectedness of life within the einyvrsgtheirgtvn's habitat. It's a call to action, urging us to be custodians of these environments, ensuring a harmonious coexistence for the einyvrsgtheirgtvn and all the creatures that share its world.</p>
 
         <p>Here is the einyvrsgtheirgtvn in its natural habitat.</p>
-        <img src="/assets/animal.webp" alt="einyvrsgtheirgtvn" width="200" height="300"/>
-        <img src="/assets/attack.jpg" alt="einyvrsgtheirgtvn" width="405" height="255"/>
+        <img src="/assets/animal.webp" alt="einyvrsgtheirgtvn" width="200" height="300">
+        <img src="/assets/attack.jpg" alt="einyvrsgtheirgtvn" width="405" height="255">
     </section>
   </main>
   <footer>
