--- a/fr/home.html
+++ b/fr/home.html
@@ -24,8 +24,8 @@
         </ul>
         <div class="language-toggle">
           <select id="language-select">
-            <option value="en">English</option>
-            <option value="fr">French</option>
+            <option value="EN">English - EN</option>
+            <option value="FR">Français - FR</option>
           </select>
         </div>
       </nav>
@@ -47,6 +47,7 @@
     <section>
       <div id="changelog">
         <h2>Journal des modifications</h2>
+        <p>1/30/2024: Ajout de traduction pour l'anglais et français</p>
         <p>23/01/2024 : Ajout d'une balise meta description</p>
         <p>23/01/2024 : Ajout d'une favicon</p>
         <p>23/01/2024 : Ajout d'une barre de navigation</p>
