--- a/en/home.html
+++ b/en/home.html
@@ -24,8 +24,8 @@
         </ul>
         <div class="language-toggle">
           <select id="language-select">
-            <option value="en">English</option>
-            <option value="fr">French</option>
+            <option value="EN">English - EN</option>
+            <option value="FR">Français - FR</option>
           </select>
         </div>
       </nav>
@@ -47,6 +47,7 @@
     <section>
       <div id="changelog">
         <h2>Changelog</h2>
+        <p>1/30/2024: Added translation for english and french</p>
         <p>1/23/2024: Added a meta description tag</p>
         <p>1/23/2024: Added a favicon</p>
         <p>1/23/2024: Added a navigation bar</p>
