--- a/fr/about.html
+++ b/fr/about.html
@@ -24,8 +24,8 @@
       </ul>
       <div class="language-toggle">
         <select id="language-select">
-          <option value="en">English</option>
-          <option value="fr">French</option>
+          <option value="EN">English - EN</option>
+          <option value="FR">Français - FR</option>
         </select>
       </div>
     </nav>
