Ajout sitemaps et robots.txt

--- a/fr/home.html
+++ b/fr/home.html
@@ -47,7 +47,9 @@
     <section>
       <div id="changelog">
         <h2>Journal des modifications</h2>
-        <p>1/30/2024: Ajout de traduction pour l'anglais et français</p>
+        <p>13/02/2024 : Ajout d'un fichier robots.txt</p>
+        <p>13/02/2024 : Ajout de deux sitemaps. Un pour les pages en français et un pour les pages en anglais</p>
+        <p>30/01/2024 : Ajout de traduction pour l'anglais et français</p>
         <p>23/01/2024 : Ajout d'une balise meta description</p>
         <p>23/01/2024 : Ajout d'une favicon</p>
         <p>23/01/2024 : Ajout d'une barre de navigation</p>
