--- a/en/home.html
+++ b/en/home.html
@@ -47,13 +47,15 @@
     <section>
       <div id="changelog">
         <h2>Changelog</h2>
-        <p>1/30/2024: Added translation for english and french</p>
-        <p>1/23/2024: Added a meta description tag</p>
-        <p>1/23/2024: Added a favicon</p>
-        <p>1/23/2024: Added a navigation bar</p>
-        <p>1/23/2024: Created new pages (about, habitat, contact)</p>
-        <p>1/17/2024: Modified the title tag to include einyvrsgtheirgtvn</p>
-        <p>1/16/2024: Created the web page with header, footer containing my full name and CIP, a main section, and a changelog section</p>
+        <p>13/02/2024 : Added a robots.txt file</p>
+        <p>13/02/2024 : Added two sitemaps. One for my french pages and one for my english pages</p>
+        <p>30/01/2024 : Added translation for english and french</p>
+        <p>23/01/2024 : Added a meta description tag</p>
+        <p>23/01/2024 : Added a favicon</p>
+        <p>23/01/2024 : Added a navigation bar</p>
+        <p>23/01/2024 : Created new pages (about, habitat, contact)</p>
+        <p>17/01/2024 : Modified the title tag to include einyvrsgtheirgtvn</p>
+        <p>17/01/2024 : Created the web page with header, footer containing my full name and CIP, a main section, and a changelog section</p>
       </div>
     </section>
   </main>
