Fix indexation issue

--- a/fr/about.html
+++ b/fr/about.html
@@ -9,7 +9,7 @@
   <link rel="icon" type="image/x-icon" href="/assets/favicon.ico">
   <title>einyvrsgtheirgtvn - À propos</title>
   <link rel="stylesheet" href="/styles.css">
-  <link rel="canonical" href="https://nadf0901.tp1ige511.com/about">
+  <link rel="canonical" href="https://nadf0901.tp1ige511.com/fr/about">
   <script src="/language-toggle.js" defer></script>
 </head>
 <body>
