--- a/fr/home.html
+++ b/fr/home.html
@@ -9,7 +9,7 @@
   <link rel="icon" type="image/x-icon" href="/assets/favicon.ico">
   <title>einyvrsgtheirgtvn - Accueil</title>
   <link rel="stylesheet" href="/styles.css">
-  <link rel="canonical" href="https://nadf0901.tp1ige511.com">
+  <link rel="canonical" href="https://nadf0901.tp1ige511.com/fr/home">
   <script src="/language-toggle.js" defer></script>
 </head>
 <body>
