--- a/fr/contact.html
+++ b/fr/contact.html
@@ -9,7 +9,7 @@
   <link rel="icon" type="image/x-icon" href="/assets/favicon.ico">
   <title>einyvrsgtheirgtvn - Contact</title>
   <link rel="stylesheet" href="/styles.css">
-  <link rel="canonical" href="https://nadf0901.tp1ige511.com/contact">
+  <link rel="canonical" href="https://nadf0901.tp1ige511.com/fr/contact">
   <script src="/language-toggle.js" defer></script>
 </head>
 <body>
