--- a/en/home.html
+++ b/en/home.html
@@ -23,13 +23,15 @@
           <li><a href="about.html">About</a></li>
           <li><a href="habitat.html">Habitat</a></li>
           <li><a href="contact.html">Contact</a></li>
+          <li>
+            <div class="language-toggle">
+              <select id="language-select">
+                <option value="EN">English - EN</option>
+                <option value="FR">Français - FR</option>
+              </select>
+            </div>
+          </li>
         </ul>
-        <div class="language-toggle">
-          <select id="language-select">
-            <option value="EN">English - EN</option>
-            <option value="FR">Français - FR</option>
-          </select>
-        </div>
       </nav>
   </header>
   <main>
@@ -57,6 +59,10 @@
           <tr>
             <th>Date</th>
             <th>Changes</th>
+          </tr>
+          <tr>
+            <td >27/02/2024</td>
+            <td>Adjust CSS to make the website more responsive</td>
           </tr>
           <tr>
             <td >27/02/2024</td>
