--- a/fr/home.html
+++ b/fr/home.html
@@ -54,43 +54,54 @@
           Journal des modifications
           <i class="fa-solid fa-chevron-up" id="chevronIcon"></i>
         </h2>
-        <p class="tip">(Click on the header to expand/collapse)</p>
+        <p class="tip">(Cliquer pour agrandir/réduire)</p>
         <table class="changelog-table" id="changelogTable">
           <tr>
             <th>Date</th>
             <th>Changements</th>
           </tr>
           <tr>
-            <td >27/02/2024</td>
-            <td>Ajustement du CSS pour rendre le site plus "responsive"</td>
+            <td>18/03/2024</td>
+            <td>Répérer la navbar dans les pages À propos, Habitat et Contact page</td>
           </tr>
           <tr>
-            <td >27/02/2024</td>
+            <td>27/02/2024</td>
+            <td>Ajustement du CSS pour rendre le site web plus réactif</td>
+          </tr>
+          <tr>
+            <td>27/02/2024</td>
             <td>La section journal des modifications est maintenant réductible.</td>
           </tr>
           <tr>
-            <td >27/02/2024</td>
+            <td>27/02/2024</td>
             <td>Modification de la section "journal des modifications" pour utiliser un tableau afin de mieux afficher l'information.</td>
           </tr>
           <tr>
-            <td >13/02/2024</td>
+            <td>13/02/2024</td>
             <td>Ajout d'un fichier robots.txt</td>
+          <tr>
+            <td>13/02/2024</td>
+            <td>Ajout d'un sitemap pour mes pages en anglais</td>
           </tr>
           <tr>
             <td>13/02/2024</td>
-            <td>Ajout de deux sitemaps. Un pour les pages en français et un pour les pages en anglais</td>
+            <td>Ajout d'un sitemap pour mes pages en français</td>
           </tr>
           <tr>
             <td>30/01/2024</td>
-            <td>Ajout de traduction pour l'anglais et français</td>
+            <td>Ajout d'un menu déroulant pour changer de langue dans la barre de navigation (par défaut, j'utilise la langue du moteur de recherche)</td>
+          </tr>
+          <tr>
+            <td>30/01/2024</td>
+            <td>Ajout d'une traduction en français de chaque page</td>
           </tr>
           <tr>
             <td>23/01/2024</td>
-            <td>Ajout d'une balise meta description</td>
+            <td>Ajout d'une balise de description meta</td>
           </tr>
           <tr>
             <td>23/01/2024</td>
-            <td>Ajout d'une favicon</td>
+            <td>Ajout d'un favicon</td>
           </tr>
           <tr>
             <td>23/01/2024</td>
@@ -98,15 +109,43 @@
           </tr>
           <tr>
             <td>23/01/2024</td>
-            <td>Création de nouvelles pages (à propos, habitat, contact)</td>
+            <td>Ajout d'images dans la page Habitat</td>
+          </tr>
+          <tr>
+            <td>23/01/2024</td>
+            <td>Création d'une nouvelle page Contact avec du texte de ChatGPT</td>
+          </tr>
+          <tr>
+            <td>23/01/2024</td>
+            <td>Création d'une nouvelle page Habitat avec du texte de ChatGPT</td>
+          </tr>
+          <tr>
+            <td>23/01/2024</td>
+            <td>Création d'une nouvelle page À propos avec du texte de ChatGPT</td>
           </tr>
           <tr>
             <td>17/01/2024</td>
-            <td>Modification de la balise title pour inclure einyvrsgtheirgtvn</td>
+            <td>Modifié la balise de titre pour inclure einyvrsgtheirgtvn</td>
           </tr>
           <tr>
             <td>16/01/2024</td>
-            <td>Création de la page web avec en-tête, pied de page contenant mon nom complet et CIP, une section principale et une section journal des modifications</td>
+            <td>Ajout d'une section de journal des modifications</td>
+          </tr>
+          <tr>
+            <td>16/01/2024</td>
+            <td>Ajout d'une section principale avec du texte de ChatGPT et des images, ainsi qu'une section de journal des modifications</td>
+          </tr>
+          <tr>
+            <td>16/01/2024</td>
+            <td>Ajout d'un pied de page contenant mon nom complet et mon CIP</td>
+          </tr>
+          <tr>
+            <td>16/01/2024</td>
+            <td>Ajout d'un en-tête à la page d'accueil</td>
+          </tr>
+          <tr>
+            <td>16/01/2024</td>
+            <td>Création de la page d'accueil</td>
           </tr>
         </table>
       </div>
